# python-template

./: .envrc  .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.sh
